bad/reachability_half_comptime_binop_and_01.example_compiler_output
ERROR
[1mbad/reachability_half_comptime_binop_and_01.lat:5:14: [1;35mwarning: [0;1m`&&` can be eliminated because right side always evaluates to true[m
	if (btrue() && true) {}
	            [1;32m^[m
[1mbad/reachability_half_comptime_binop_and_01.lat:5:17: [1;34mnote: [0;1mright side starts here[m
	if (btrue() && true) {}
	               [1;32m^[m
[1mbad/reachability_half_comptime_binop_and_01.lat:4:1: [1;31merror: [0;1mfunction does not return a value in all control paths[m
int main() {
[1;32m^[m
